[tool.poetry]
name = "amex"
version = "0.1.0"
description = "Code for Kaggle competition for amex-default-prediction"
authors = ["Najib Ishaq <najib_ishaq@zoho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22"
pandas = "^1.4"
datatable = { git = "https://github.com/h2oai/datatable.git", branch = "main" }
tensorflow = "^2.9"
tabnet = "^0.1.6"
scikit-learn = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"