[tool.poetry]
name = "amex"
version = "0.1.0"
description = "Code for Kaggle competition for amex-default-prediction"
authors = ["Najib Ishaq <najib_ishaq@zoho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "~1.23"
pandas = "~1.4"
datatable = [
    { git = "https://github.com/h2oai/datatable.git", branch = "main" },
]
scikit-learn = "~1.1"
scipy = "~1.9"
torch = "~1.12"
torchvision = "~0.13.0"
torchaudio = "~0.12.0"
pytorch-tabnet = "~3.1"
tqdm = "~4.64"

[tool.poetry.dev-dependencies]
matplotlib = "~3.5"
seaborn = "~0.11"
streamlit = "~1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"